# One-Labs

./: .dockerignore  .gitignore  README.md  STREAMLIT_README.md  generate_data.sh  generate_test_data.py  main.py  pyproject.toml  run_streamlit.sh  streamlit_app.py
.plans/: 01-architecture.md  02-domain-models.md  03-matching-engine.md  04-mismatch-detector.md  05-test-data-generator.md  06-implementation-roadmap.md  README.md
recon/adapters/batch/: loader.py  runner.py
recon/adapters/storage/: in_memory_repo.py
recon/domain/: __init__.py  models.py
recon/implementations/classifiers/: threshold_classifier.py
recon/implementations/matchers/: amount_time.py  reference_id.py
recon/implementations/scorers/: weighted_scorer.py
recon/ports/: __init__.py
recon/services/: matching_engine.py  mismatch_detector.py
recon/usecases/: reconcile.py
test_data_generator/: config.py  generate.py  merchants.py  validate.py
test_data_generator/output/: bank_statement.csv  gap_manifest.json  platform_transactions.csv
test_data_generator/scenarios/: base.py  g1_cross_month.py  g2_rounding.py  g3_duplicate.py  g4_orphan_refund.py
tests/unit/: test_reconciliation.py
